[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "plotly>=6.3.1",
    "rasterio>=1.4.3",
    "reportlab>=4.4.4",
    "scikit-image>=0.25.2",
    "scipy>=1.16.3",
    "streamlit>=1.50.0",
    "streamlit-folium>=0.25.3",
]
